/*
 *
 */

2008-09-02 16:29 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * makefile.vc
  * samples/sizers/GNUmakefile
  * samples/dbbrowser/GNUmakefile
  * samples/simple/GNUmakefile
  * samples/helloworld/GNUmakefile
  * samples/helloworld1/GNUmakefile
  * makefile.gcc
    * minor labeling on Harbour compiler var

  * src/wxbase/app/wx_app.cpp
  * src/wxbase/networking/wx_socketserver.cpp
    * using hb_stackReturnItem() instead of &(hb_stack.Return)

2008-09-01 22:56 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * makefile.vc
  * GNUmakefile
  * samples/sizers/GNUmakefile
  * samples/dbbrowser/GNUmakefile
  * samples/simple/GNUmakefile
  * samples/helloworld/GNUmakefile
  * samples/helloworld1/GNUmakefile
  * config/tmpl_hrb.bkl
  * makefile.gcc
    * added HBCOMPILER variable to hold the name of compiler used (harbour/xharbour)

2008-09-01 22:02 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  + include/wxbase/wx_xmldocument.h
  + src/wxbase/xmlclasses
  + src/wxbase/xmlclasses/wxhxmldocument.prg
  + src/wxbase/xmlclasses/wx_xmldocument.cpp
    + added wxXmlDocument class

  * GNUmakefile
  * wxharbour.bkl
  * samples/sizers/GNUmakefile
  * samples/dbbrowser/GNUmakefile
  * config/tmpl_hrb.bkl
    * changed version to 0.4
    + added definition of _DEBUG_ if BUILD=debug ( -d_DEBUG_ )
    * changed position of fm lib

2008-07-24 20:42 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * src/hrbcompat/tbrowse/wx_browse.cpp
  * src/wxbase/app/wx_app.cpp
  * src/wxbase/controls/wx_staticbox.cpp
  * src/wxbase/controls/wx_textctrl.cpp
  * src/wxbase/controls/wx_button.cpp
  * src/wxbase/controls/wx_statictext.cpp
  * src/wxbase/manwindows/wx_frame.cpp
  * src/wxbase/miscwindows/wx_notebook.cpp
  * src/wxbase/miscwindows/wx_grid.cpp
  * src/wxbase/miscwindows/wx_gridtablebase.cpp
  * src/wxbase/miscwindows/wx_statusbar.cpp
  * src/wxbase/networking/wx_socketbase.cpp
  * src/wxbase/networking/wx_socketclient.cpp